# upstageailab-nlp-summarization-nlp_3

./: .env.template  .gitignore  README.md  pyproject.toml
configs/: config.yaml
configs/data/: default.yaml
configs/model/: distilbert.yaml  distilgpt2.yaml  kobart-base-v2.yaml  kobart-summarization.yaml
configs/optimizer/: adam.yaml  adamw.yaml
configs/scheduler/: cosine.yaml
configs/training/: default.yaml
docs/: KoBART계열비교.md  guide_of_llm_project.md  llm_training_optimizations.md  project_roadmap.md  report_of_hardware_spec.md  what_is_lora.md
notebooks/jaehyung/: eda_test.py
notebooks/korea202/: eda.ipynb  nlp-summarization.ipynb
notebooks/yuiyeong/: 20250724_poc_of_setting.ipynb
scripts/: init-instance.sh
src/: eda.ipynb  make-data.py  nlp-summarization.ipynb  nlp-summarization.py
src/config/: __init__.py  schemas.py
src/data/: backtranslation_augmentor.py  bart_summarization_dataset.py  dialogue_paraphraser.py  simple_dataset.py
src/models/: bart_summarization_module.py
src/scripts/: train.py
src/training/: callbacks.py  loggers.py
src/utils/: helper.py
sweep/: sweep.yaml
